// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`importBundleCore (Python fixture parity) > scenario A: post-import delete replays from the synthetic checkpoint > delete_result 1`] = `
{
  "deleted": 1,
  "scans": 4,
  "tracked": 5,
}
`;

exports[`importBundleCore (Python fixture parity) > scenario A: post-import delete replays from the synthetic checkpoint > episodes 1`] = `
[
  {
    "compaction_id": "imp-test",
    "cve": "CVE-E",
    "epss": null,
    "first_seen": "2026-01-02T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-01-15T00:00:00Z",
    "risk_observed_at": null,
    "severity": "HIGH",
    "superseded_by_scan": null,
    "tags_json": null,
    "vuln_key": "id:E",
  },
]
`;

exports[`importBundleCore (Python fixture parity) > scenario A: post-import delete replays from the synthetic checkpoint > ledger 1`] = `
{
  "id:A": {
    "asset_id": "vm-a",
    "asset_name": "vm-a-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-A",
    "epss": null,
    "first_scan_id": "2026-01-05T06:00:00Z",
    "first_seen": "2025-12-20T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-20T06:00:00Z",
    "last_seen": "2026-06-20T06:00:00Z",
    "portal_url": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:A",
  },
  "id:B": {
    "asset_id": "vm-b",
    "asset_name": "vm-b-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-B",
    "epss": null,
    "first_scan_id": "2026-01-05T06:00:00Z",
    "first_seen": "2026-01-02T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-20T06:00:00Z",
    "last_seen": "2026-06-20T06:00:00Z",
    "portal_url": null,
    "published_date": null,
    "reopened_count": 1,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:B",
  },
  "id:C": {
    "asset_id": "vm-c",
    "asset_name": "vm-c-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-C",
    "epss": null,
    "first_scan_id": "2026-01-05T06:00:00Z",
    "first_seen": "2026-01-05T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-20T06:00:00Z",
    "last_seen": "2026-01-20T06:00:00Z",
    "portal_url": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "disappeared",
    "resolved_at": "2026-06-20T06:00:00Z",
    "risk_observed_at": null,
    "severity": "MEDIUM",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:C",
  },
  "id:D": {
    "asset_id": "vm-d",
    "asset_name": "vm-d-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-D",
    "epss": null,
    "first_scan_id": "2026-06-20T06:00:00Z",
    "first_seen": "2026-06-20T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-20T06:00:00Z",
    "last_seen": "2026-06-20T06:00:00Z",
    "portal_url": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:D",
  },
}
`;

exports[`importBundleCore (Python fixture parity) > scenario A: post-import delete replays from the synthetic checkpoint > scans 1`] = `
[
  {
    "mode": "live",
    "new_count": 3,
    "reopened_count": 0,
    "resolved_count": 0,
    "scan_id": "2026-01-05T06:00:00Z",
    "sealed": 1,
    "severities": null,
    "shape": "flat",
    "total": 3,
    "ts": "2026-01-05T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 0,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-12T06:00:00Z",
    "sealed": 1,
    "severities": null,
    "shape": "flat",
    "total": 3,
    "ts": "2026-01-12T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 1,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-20T06:00:00Z",
    "sealed": 1,
    "severities": null,
    "shape": "flat",
    "total": 3,
    "ts": "2026-01-20T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 1,
    "reopened_count": 1,
    "resolved_count": 1,
    "scan_id": "2026-06-20T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 3,
    "ts": "2026-06-20T06:00:00Z",
  },
]
`;

exports[`importBundleCore (Python fixture parity) > scenario A: uncompacted bundle merges into overlapping GAS history > checkpoint 1`] = `
{
  "id:A": {
    "asset_id": "vm-a",
    "asset_name": "vm-a-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-A",
    "epss": null,
    "first_scan_id": "2026-01-05T06:00:00Z",
    "first_seen": "2025-12-20T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-20T06:00:00Z",
    "last_seen": "2026-01-20T06:00:00Z",
    "portal_url": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:A",
  },
  "id:B": {
    "asset_id": "vm-b",
    "asset_name": "vm-b-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-B",
    "epss": null,
    "first_scan_id": "2026-01-05T06:00:00Z",
    "first_seen": "2026-01-02T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-12T06:00:00Z",
    "last_seen": "2026-01-12T06:00:00Z",
    "portal_url": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-01-10T00:00:00Z",
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:B",
  },
  "id:C": {
    "asset_id": "vm-c",
    "asset_name": "vm-c-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-C",
    "epss": null,
    "first_scan_id": "2026-01-05T06:00:00Z",
    "first_seen": "2026-01-05T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-20T06:00:00Z",
    "last_seen": "2026-01-20T06:00:00Z",
    "portal_url": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "MEDIUM",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:C",
  },
  "id:E": {
    "asset_id": "vm-e",
    "asset_name": "vm-e-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-E",
    "epss": null,
    "first_scan_id": "2026-01-20T06:00:00Z",
    "first_seen": "2026-01-02T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-20T06:00:00Z",
    "last_seen": "2026-01-20T06:00:00Z",
    "portal_url": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-01-15T00:00:00Z",
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:E",
  },
}
`;

exports[`importBundleCore (Python fixture parity) > scenario A: uncompacted bundle merges into overlapping GAS history > checkpoint_floor_scan_id 1`] = `"2026-01-20T06:00:00Z"`;

exports[`importBundleCore (Python fixture parity) > scenario A: uncompacted bundle merges into overlapping GAS history > checkpoint_floor_ts 1`] = `"2026-01-20T06:00:00Z"`;

exports[`importBundleCore (Python fixture parity) > scenario A: uncompacted bundle merges into overlapping GAS history > episodes 1`] = `
[
  {
    "compaction_id": "imp-test",
    "cve": "CVE-E",
    "epss": null,
    "first_seen": "2026-01-02T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-01-15T00:00:00Z",
    "risk_observed_at": null,
    "severity": "HIGH",
    "superseded_by_scan": null,
    "tags_json": null,
    "vuln_key": "id:E",
  },
]
`;

exports[`importBundleCore (Python fixture parity) > scenario A: uncompacted bundle merges into overlapping GAS history > ledger 1`] = `
{
  "id:A": {
    "asset_id": "vm-a",
    "asset_name": "vm-a-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-A",
    "epss": null,
    "first_scan_id": "2026-01-05T06:00:00Z",
    "first_seen": "2025-12-20T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-20T06:00:00Z",
    "last_seen": "2026-06-20T06:00:00Z",
    "portal_url": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:A",
  },
  "id:B": {
    "asset_id": "vm-b",
    "asset_name": "vm-b-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-B",
    "epss": null,
    "first_scan_id": "2026-01-05T06:00:00Z",
    "first_seen": "2026-01-02T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-20T06:00:00Z",
    "last_seen": "2026-06-20T06:00:00Z",
    "portal_url": null,
    "published_date": null,
    "reopened_count": 1,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:B",
  },
  "id:C": {
    "asset_id": "vm-c",
    "asset_name": "vm-c-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-C",
    "epss": null,
    "first_scan_id": "2026-01-05T06:00:00Z",
    "first_seen": "2026-01-05T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-01-20T06:00:00Z",
    "last_seen": "2026-01-20T06:00:00Z",
    "portal_url": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "disappeared",
    "resolved_at": "2026-06-10T06:00:00Z",
    "risk_observed_at": null,
    "severity": "MEDIUM",
    "status": "RESOLVED",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:C",
  },
  "id:D": {
    "asset_id": "vm-d",
    "asset_name": "vm-d-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-D",
    "epss": null,
    "first_scan_id": "2026-06-10T06:00:00Z",
    "first_seen": "2026-06-10T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-20T06:00:00Z",
    "last_seen": "2026-06-20T06:00:00Z",
    "portal_url": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:D",
  },
}
`;

exports[`importBundleCore (Python fixture parity) > scenario A: uncompacted bundle merges into overlapping GAS history > scans 1`] = `
[
  {
    "mode": "live",
    "new_count": 3,
    "reopened_count": 0,
    "resolved_count": 0,
    "scan_id": "2026-01-05T06:00:00Z",
    "sealed": 1,
    "severities": null,
    "shape": "flat",
    "total": 3,
    "ts": "2026-01-05T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 0,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-12T06:00:00Z",
    "sealed": 1,
    "severities": null,
    "shape": "flat",
    "total": 3,
    "ts": "2026-01-12T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 1,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-20T06:00:00Z",
    "sealed": 1,
    "severities": null,
    "shape": "flat",
    "total": 3,
    "ts": "2026-01-20T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 1,
    "reopened_count": 1,
    "resolved_count": 1,
    "scan_id": "2026-06-10T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 3,
    "ts": "2026-06-10T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 0,
    "reopened_count": 0,
    "resolved_count": 0,
    "scan_id": "2026-06-20T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 3,
    "ts": "2026-06-20T06:00:00Z",
  },
]
`;

exports[`importBundleCore (Python fixture parity) > scenario B: pre-compacted bundle (sealed rows + episodes) merges verbatim > episodes 1`] = `
[
  {
    "compaction_id": "aaa8a2fc7c7d4e6fa5c2c2b7f87e41a6",
    "cve": "CVE-X",
    "epss": null,
    "first_seen": "2025-10-20T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2025-11-05T00:00:00Z",
    "risk_observed_at": null,
    "severity": "HIGH",
    "superseded_by_scan": null,
    "tags_json": null,
    "vuln_key": "id:X",
  },
  {
    "compaction_id": "imp-test",
    "cve": "CVE-Z",
    "epss": null,
    "first_seen": "2026-01-10T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": "api",
    "resolved_at": "2026-01-18T00:00:00Z",
    "risk_observed_at": null,
    "severity": "MEDIUM",
    "superseded_by_scan": null,
    "tags_json": null,
    "vuln_key": "id:Z",
  },
]
`;

exports[`importBundleCore (Python fixture parity) > scenario B: pre-compacted bundle (sealed rows + episodes) merges verbatim > ledger 1`] = `
{
  "id:W": {
    "asset_id": "vm-w",
    "asset_name": "vm-w-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-W",
    "epss": null,
    "first_scan_id": "2026-06-10T06:00:00Z",
    "first_seen": "2026-06-10T06:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-20T06:00:00Z",
    "last_seen": "2026-06-20T06:00:00Z",
    "portal_url": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "HIGH",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:W",
  },
  "id:Y": {
    "asset_id": "vm-y",
    "asset_name": "vm-y-name",
    "asset_type": "VIRTUAL_MACHINE",
    "cloud": "AWS",
    "cve": "CVE-Y",
    "epss": null,
    "first_scan_id": "2025-11-01T06:00:00Z",
    "first_seen": "2025-10-25T00:00:00Z",
    "fix_date": null,
    "fix_observed_at": null,
    "has_exploit": null,
    "has_kev": null,
    "last_scan_id": "2026-06-20T06:00:00Z",
    "last_seen": "2026-06-20T06:00:00Z",
    "portal_url": null,
    "published_date": null,
    "reopened_count": 0,
    "resolution_src": null,
    "resolved_at": null,
    "risk_observed_at": null,
    "severity": "CRITICAL",
    "status": "OPEN",
    "subscription_ext_id": null,
    "subscription_name": null,
    "tags_json": null,
    "vuln_key": "id:Y",
  },
}
`;

exports[`importBundleCore (Python fixture parity) > scenario B: pre-compacted bundle (sealed rows + episodes) merges verbatim > scans 1`] = `
[
  {
    "mode": "live",
    "new_count": 2,
    "reopened_count": 0,
    "resolved_count": 0,
    "scan_id": "2025-11-01T06:00:00Z",
    "sealed": 1,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2025-11-01T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 0,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2025-11-10T06:00:00Z",
    "sealed": 1,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2025-11-10T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 1,
    "reopened_count": 0,
    "resolved_count": 0,
    "scan_id": "2026-01-10T06:00:00Z",
    "sealed": 1,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-01-10T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 0,
    "reopened_count": 0,
    "resolved_count": 1,
    "scan_id": "2026-01-20T06:00:00Z",
    "sealed": 1,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-01-20T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 1,
    "reopened_count": 0,
    "resolved_count": 0,
    "scan_id": "2026-06-10T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-06-10T06:00:00Z",
  },
  {
    "mode": "live",
    "new_count": 0,
    "reopened_count": 0,
    "resolved_count": 0,
    "scan_id": "2026-06-20T06:00:00Z",
    "sealed": 0,
    "severities": null,
    "shape": "flat",
    "total": 2,
    "ts": "2026-06-20T06:00:00Z",
  },
]
`;
